# MicroGreenhouseGroup5

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  adc.c  display.c  fan.c  fan.h  grow_light.c  idf_component.yml  inputs.c  light_sensor.c  main.c  mqtt.c  outputs.c  parameter_config.c  pump.c  soil_moisture.c  temp_hum_sensor.c  uart_pc.c  wifi.c  wifi_connect.c
main/include/: adc.h  config.h  display.h  fan.h  grow_light.h  inputs.h  light_sensor.h  lv_conf.h  mqtt.h  outputs.h  parameter_config.h  pump.h  temp_hum_sensor.h  uart_pc.h  utils.h  wifi.h
main/includes/: soil_moisture.h
